--- a/allsacapp/src/main/webapp/assets/css/layout.css
+++ b/allsacapp/src/main/webapp/assets/css/layout.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+
 /*
 Template Name: Merciano
 Author: <a href="http://www.os-templates.com/">OS Templates</a>
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 File: Layout CSS
 */
 
-@import url("fontawesome-4.6.2.min.css");
+@import url("font-awesome.min.css");
 @import url("framework.css");
 
 /* Rows
@@ -230,10 +230,10 @@ input:focus, textarea:focus, *:required:focus{border-color:#D3B48D;}
 .overlay{color:#FFFFFF; background-color:inherit;}
 .overlay::after{color:inherit; background-color:rgba(0,0,0,.55);}
 
-.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#D3B48D; border-color:#D3B48D;}
+/*.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#D3B48D; border-color:#D3B48D;}
 .btn:hover, .btn.inverse{color:inherit; background-color:transparent; border-color:inherit;}
 
-
+*/
 /* Rows */
 .row0, .row0 a{}
 .row1, .row1 a{}
